--- a/_posts/2025-3-1-RiscV.md
+++ b/_posts/2025-3-1-RiscV.md
@@ -1,31 +1,176 @@
 ---
-title: Introduction to RISCV
-date: 2025-3-1 14:30:00 +0700;
-categories: [Hardware Projects, Architect]
-tags: [riscv, mcu]     
+title: Buildroot Build File System
+date: 2025-8-10 8:30:00 +0700
+categories: [Embedded Systems]
+tags: [lichee, u-boot, linux]     
+comments: false
 ---
 
-<h3 id="Architecture" style="font-weight: bold;">Architecture</h3>
-Computers will have a set of instruction set called ISA which will describe how the processor should be coded and excuted. 
-More specifically, RISC-V comprises a small general base ISA and various ISA extensions compared to Complex Instruction Set Computing (CISC), which uses a large set of multiple instructions. CISC processors that use proprietary ISAs like Intel x86 and ARM typically require more cycle times to execute instructions (many times due to complex instruction getting multiple micro-coded instructions), while RISC-V processors can execute instructions in a single cycle. The smaller energy-efficient modular design of RISC-V with optional ISA extensions simplifies the instructions given to the processor to execute tasks. It allows developers to create a diverse array of custom processors for various markets quickly and efficiently.  
-<h3 id="Open-source ISA" style="font-weight: bold;">Open-source ISA</h3>
-An ISA (Instruction Set Architecture) defines the set of instructions a processor can excute. Open-source ISAs are freely available, allowing anyone to implement, modify, or extend them without licensing fees. RISC-V is the most well-known open-source ISA today, whereas ARM is proprietary but widely used.  
-RISC-V is an open ISAs, which means you are free to implement a RISC-V CPU in a microprocessor whithout having to pay royalties to anyone for using this ISA. The RISC-V ISA is considered the fifth generation of processors built on the concept of the reduced instruction set computer (RISC). It was designed as a modular ISA, as opposed to the traditional incremental ISAs. That means a RISC-V implementation is composed of a mandatory base ISA and a number of ISA extensions, so that custom CPUs may be tailored to the application's needs.  
-<h3 id="RISC-V advantages" style="font-weight: bold;">RISC-V advantages</h3>
-RISC-V has many advantages for developers and manufacturers compared to proprietary ISAs like x86 and ARM. The most notable include:
+This article describes how to build a filesystem with Buildroot for Lichee Nano, including getting the source code from GitHub, configuring compilation options, compiling, packaging, downloading, and viewing startup logs. It also compares the impact of different C libraries on filesystem size, recommending musl for reduced size. Packaging script and example `rootfs.tar` files are provided.
 
-- Openness: RISC-V's primary differentiator is its open-source nature. Unlike expensive propriety ISAs used in CISC processors, the RISC-V ISA is open to anyone and free of licensing and royalty fees. The RISC-V community-driven open ISA drives collaboration and innovation across industry. The open ISA instills transparency and trust with freely available ISA specifications and extensions that anyone can scrutinize.
-- Versatility: Due to its modular design, RISC-V can cover diverse domains across various applications and functions, from data centers to embedded systems, machine learning modeling, high-performance computing environments, and IoT devices. RISC-V can handle more domain-specific requirements, adjust resources to accommodate changes in demand, and quickly scale, making it one of the most adaptable processors in the industry.
-- Extensibility: Customizing the ISA to meet specific application needs is a crucial differentiator for the RISC-V architecture. RISC-V uniquely blends a modular design with the ability to add custom instructions to an open-source ISA. RISC-V can customize CPUs to their core, allowing developers to build application-specific processors that can improve performance and energy at the application level.
-- Simplicity: RISC-V prioritizes simplicity by using a small set of ISA instructions with extensions that execute one instruction per clock cycle, unlike CISC processors that use a larger set of complex instructions that may require multiple clock cycles. With fewer and simpler instructions, RISC-V enables easier chip design making, reduces complexity, accelerates development cycles, and simplifies hardware and software optimization.
-<h3 id="Applications" style="font-weight: bold;">Applications</h3>
-The applications of the RISC V processor include the following.
+---
 
-- RISC-V is used in embedded systems, artificial intelligence & machine learning.
-- These processors are used in high-performance-based embedded system applications.
-- This processor is appropriate to use in some particular fields like edge computing, AI & storage applications.
-- RISC-V is important as it permits smaller device manufacturers to design hardware without paying.
-- This processor simply allows the researchers and developers to design as well as research with a freely available ISA or instruction set architecture.
-- The applications of RISC V range from small embedded microcontrollers to desktop PCs & supercomputers including vector processors.
+<h3 id="architecture" style="font-weight: bold;">Architecture</h3>
 
-In the next posts, we will do some hands-on projects with the RISC-V core on the Pico2 board to dive deeper into its real-world applications.
+<h3 id="get-buildroot" style="font-weight: bold;">1. Get the Buildroot Source Code</h3>
+
+You can download Buildroot from the <a href="https://buildroot.org/">official site</a> or GitHub:
+
+**Download from Official:**
+```sh
+wget https://buildroot.org/downloads/buildroot-2017.08.tar.gz
+tar xvf buildroot-2017.08.tar.gz
+```
+
+**Download from GitHub:**
+```sh
+git clone https://github.com/buildroot/buildroot.git
+# Latest version at the time of writing: 2022.02.x
+```
+> <em>Recommendation: Use the GitHub source code package. The official lichee package may not compile successfully.</em>
+
+---
+
+<h3 id="pre-compile-config" style="font-weight: bold;">2. Pre-Compile Configuration</h3>
+
+Navigate to the Buildroot directory and enter the configuration page:
+
+```sh
+make menuconfig
+```
+
+If a `.config` file exists, delete it first:
+
+```sh
+rm .config -fv
+```
+
+<strong>Modify the following configuration:</strong>
+
+<ul>
+<li><strong>Target options</strong>
+  <ul>
+    <li>Target Architecture: <code>ARM (little endian)</code></li>
+    <li>Target Binary Format: <code>ELF</code></li>
+    <li>Target Architecture Variant: <code>arm926t</code></li>
+    <li>Enable VFP extension support: <em>(unchecked)</em></li>
+    <li>Target ABI: <code>EABI</code></li>
+    <li>Floating point strategy: <code>Soft float</code></li>
+    <li>ARM instruction set: <code>ARM</code></li>
+  </ul>
+</li>
+<li><strong>Toolchain</strong>
+  <ul>
+    <li>C library: <code>musl</code> <em>(Recommended for smaller filesystem size)</em></li>
+  </ul>
+</li>
+</ul>
+
+---
+
+<h3 id="compile" style="font-weight: bold;">3. Compile</h3>
+
+Simply run:
+
+```sh
+make
+```
+> <em>Note: Multi-threaded compilation is not supported. Depending on download speed, compilation may take from half an hour to half a day.</em>
+
+If downloads are slow, lichee officially suggests using <code>dl.zip</code>, but the extracted directory may not match Buildroot's requirements. It's often necessary to download packages again during compilation.
+
+Once successful, you'll get the filesystem tar package:  
+<code>output/image/rootfs.tar</code>
+
+---
+
+<h3 id="filesystem-size" style="font-weight: bold;">4. Filesystem Size Comparison</h3>
+
+Tested with different C libraries:
+
+<strong>Buildroot 2017.08:</strong>
+<ul>
+<li><code>uClibc-ng</code>: <code>rootfs.tar</code> ≈ 1.6 MB</li>
+<li><code>glibc</code>: <code>rootfs.tar</code> ≈ 3.5 MB</li>
+<li><code>musl</code>: <code>rootfs.tar</code> ≈ 1.6 MB</li>
+</ul>
+
+<strong>Buildroot 2021.02.4:</strong>
+<ul>
+<li><code>uClibc-ng</code>: <code>rootfs.tar</code> ≈ 2.0 MB</li>
+<li><code>glibc</code>: <code>rootfs.tar</code> ≈ 3.8 MB</li>
+<li><code>musl</code>: <code>rootfs.tar</code> ≈ 2.1 MB</li>
+</ul>
+
+> <em>musl or uClibc-ng fit well in SPI-flash.</em>
+
+<strong>Sample rootfs.tar (uClibc-ng, root passwordless):</strong>
+<ul>
+<li>buildrootfs-2017-lichee-nano-rootfs.tar</li>
+<li>buildrootfs-2021.02.4-lichee-nano-rootfs.tar</li>
+</ul>
+
+---
+
+<h3 id="packaging-burning" style="font-weight: bold;">5. Packaging and Burning to SPI-Flash</h3>
+
+Package the compiled files into a <code>jfss2</code> image and burn to SPI-flash.
+
+<strong>Packaging Script Example</strong>
+
+```bash
+#!/bin/bash
+
+curPath=$(readlink -f "$(dirname "$0")")
+# root.tar path
+_ROOTFS_FILE=$curPath/output/image/rootfs.tar
+# .ko files path
+_MOD_FILE=$curPath/../linux/out/lib/modules
+
+mkdir rootfs
+echo "Packing rootfs..."
+# Extract rootfs.tar
+tar -xvf $_ROOTFS_FILE -C ./rootfs >/dev/null &&\
+# Copy .ko files to lib/modules
+cp -r $_MOD_FILE  rootfs/lib/modules/
+# Create filesystem image (adjust params for your SPI-flash)
+mkfs.jffs2 -s 0x100 -e 0x10000 --pad=0xAF0000 -d rootfs/ -o jffs2.img
+echo "rootfs update done!"
+```
+
+<strong>Burn the Image</strong>
+
+Use <code>sunxi-fel</code>:
+
+```sh
+sudo sunxi-fel -p spiflash-write 0x0510000 ./jffs2.img
+```
+> <em>After burning, power on and you should see a successful boot.</em>
+
+---
+
+<h3 id="startup-log" style="font-weight: bold;">6. Startup Log</h3>
+
+*(Insert your boot log image or output here)*
+
+---
+
+<h3 id="appendix" style="font-weight: bold;">Appendix: Common Configurations &amp; Notes</h3>
+
+<ul>
+<li>Welcome message, login prompt, and root password are in system configs.</li>
+<li>No need to check with kernel/bootloader, as they're directly burned onto SPI-flash.</li>
+<li>To create other image formats, use the extracted tar and tools like <code>mkfs.jffs2</code>.</li>
+<li>Toolchain's linux header sets the compiler; usually can be ignored.</li>
+<li>Further learning can be found in official Buildroot documentation and archives.</li>
+</ul>
+
+---
+
+<h3 id="references" style="font-weight: bold;">References</h3>
+
+<ul>
+<li><a href="https://buildroot.org/">Buildroot Official Site</a></li>
+<li><a href="https://github.com/buildroot/buildroot">Buildroot GitHub</a></li>
+<li><a href="#">Lichee Nano Official Documentation</a></li>
+</ul>
