--- a/_posts/2025-5-20-CH32V003-01.md
+++ b/_posts/2025-5-20-CH32V003-01.md
@@ -1,7 +1,7 @@
 ---
 title: Build CH32V003 chip in Linux environment
 date: 2025-5-20 14:30:00 +0700;
-categories: [Hardware Projects]
+categories: [Embedded Systems, CH32V]
 tags: [linux,riscv]     
 comments: true
 ---
