_add status bar

--- a/_posts/2024-12-16-Linux-BBB.md
+++ b/_posts/2024-12-16-Linux-BBB.md
@@ -24,7 +24,7 @@ host$ unxz bone-debian-9.12-imgtec-armhf-2020-04-06-4gb.img.xz
 Write that extracted file into micro SDcard(you need to unmount the SDcard first if it was mounted into system)
 ```shell
 host$ sudo umount /dev/sdX*
-host$ sudo dd if=~/bone-debian-9.12-imgtec-armhf-2020-04-06-4gb.img of=/dev/sdX
+host$ sudo dd if=~/bone-debian-9.12-imgtec-armhf-2020-04-06-4gb.img of=/dev/sdX bs=4M status=progress conv=fsync
 host$ sync
 ```
 Hola, it's almost done. Now you can insert that sdcard into your board then insert the USB cable to power your board via computer. 
